# Meditake

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  database.py  docker-compose.yaml  env.local  pyproject.toml  requirements.txt
backend/common/: __init__.py  logging.py
backend/common/logging/: config.json  main.py
backend/database/schema/: adherence.sql  auth.sql  medication.sql  prescription.sql  schedule.sql
backend/database/seed/: medicines1.csv
backend/protos/: auth.proto  medicine.proto  notification.proto  prescription.proto  reminder.proto
backend/seed/: fetchmedicationData.py
backend/services/api/: auth_client.py  config.py  grpc_client.py  main.py
backend/services/api/db/: engine.py
backend/services/api/routes/: auth.py  medicine.py  prescription.py  schedule.py
backend/services/auth/: __main__.py  infra.yaml  logic.py  main.py
backend/services/auth/db/: db.py  model.py
backend/services/medicine/: main.py
backend/services/notification/: main.py
backend/services/prescription/: main.py
backend/services/reminder/: grpc_server.py
backend/services/schedule/: main.py
database/seed/: medicines.csv
docs/: Database_Schema.md  Meditake_DB_Scheam.drawio  Microservice_Architecture_Meditak.drawio  README.md  backend-architecture.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/lib/: app.dart  main.dart
mobile/test/: widget_test.dart
(+11 files in other folders)
