[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==3.2.2",
    "fastapi>=0.138.1",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "passlib>=1.7.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
