[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==3.2.2",
    "fastapi[standard]>=0.138.1",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]

